@@ -35,6 +35,7 @@ lightstrategy.type = "DLS_CACHE"
 #lightstrategy.maxsamplescount = 10000000
 #lightstrategy.targetcachehitratio = 100
 #lightstrategy.entry.volumes.enable = 0
+#lightstrategy.persistent.file = cache.dlsc
 ##
 #path.clamping.variance.maxvalue = 1
 ##
