@@ -26,6 +26,8 @@
 #include <boost/circular_buffer.hpp>
 
 #include "luxrays/core/geometry/bbox.h"
+#include "luxrays/utils/safesave.h"
+
 #include "slg/samplers/sobol.h"
 #include "slg/lights/strategies/dlscacheimpl/dlscacheimpl.h"
 #include "slg/lights/strategies/dlscacheimpl/dlscoctree.h"
@@ -52,11 +54,7 @@ DirectLightSamplingCache::~DirectLightSamplingCache() {
 bool DirectLightSamplingCache::IsCacheEnabled(const BSDF &bsdf) const {
 	const BSDFEvent eventTypes = bsdf.GetEventTypes();
 
-	if (bsdf.IsDelta() || (eventTypes & SPECULAR) ||
-			((eventTypes & GLOSSY) && (bsdf.GetGlossiness() < params.visibility.glossinessUsageThreshold)))
-		return false;
-	else
-		return true;
+	return !bsdf.IsDelta() && !(eventTypes & SPECULAR);
 }
 
 //------------------------------------------------------------------------------
@@ -397,6 +395,22 @@ void DirectLightSamplingCache::Build(const Scene *scn) {
 	SLG_LOG("Building DirectLightSamplingCache");
 
 	//--------------------------------------------------------------------------
+	// Load the persistent cache file if required
+	//--------------------------------------------------------------------------
+
+	if (params.persistent.fileName != "") {
+		// Check if the file already exist
+		if (boost::filesystem::exists(params.persistent.fileName)) {
+			// Load the cache from the file
+			LoadPersistentCache(params.persistent.fileName);
+
+			return;
+		}
+		
+		// The file doesn't exist so I have to go trough normal pre-processing
+	}
+
+	//--------------------------------------------------------------------------
 	// Evaluate best radius if required
 	//--------------------------------------------------------------------------
 
@@ -434,6 +448,13 @@ void DirectLightSamplingCache::Build(const Scene *scn) {
 				params.visibility.lookUpNormalAngle);
 	} else
 		SLG_LOG("WARNING: DirectLightSamplingCache has an empty cache");
+
+	//--------------------------------------------------------------------------
+	// Check if I have to save the persistent cache
+	//--------------------------------------------------------------------------
+
+	if (params.persistent.fileName != "")
+		SavePersistentCache(params.persistent.fileName);
 
 	// Export the entries for debugging
 	//DebugExport("entries-point.scn", entryRadius * .05f);
@@ -479,3 +500,56 @@ void DirectLightSamplingCache::DebugExport(const string &fileName, const float s
 
 	prop.Save(fileName);
 }
+
+//------------------------------------------------------------------------------
+// Serialization
+//------------------------------------------------------------------------------
+
+void DirectLightSamplingCache::LoadPersistentCache(const std::string &fileName) {
+	SLG_LOG("Loading persistent EnvLightVisibility cache: " + fileName);
+
+	SerializationInputFile sif(fileName);
+
+	sif.GetArchive() >> params;
+
+	sif.GetArchive() >> cacheEntries;
+	sif.GetArchive() >> cacheEntriesBVH;
+
+	visibilityParticles.clear();
+	visibilityParticles.shrink_to_fit();
+	
+	if (!sif.IsGood())
+		throw runtime_error("Error while loading DirectLightSamplingCache persistent cache: " + fileName);
+}
+
+void DirectLightSamplingCache::SavePersistentCache(const std::string &fileName) {
+	SLG_LOG("Saving persistent DirectLightSamplingCache cache: " + fileName);
+
+	SafeSave safeSave(fileName);
+	{
+		SerializationOutputFile sof(params.persistent.safeSave ? safeSave.GetSaveFileName() : fileName);
+
+		sof.GetArchive() << params;
+
+		sof.GetArchive() << cacheEntries;
+		sof.GetArchive() << cacheEntriesBVH;
+
+		visibilityParticles.clear();
+		visibilityParticles.shrink_to_fit();
+
+		if (!sof.IsGood())
+			throw runtime_error("Error while saving DirectLightSamplingCache persistent cache: " + fileName);
+
+		sof.Flush();
+
+		SLG_LOG("DirectLightSamplingCache persistent cache saved: " << (sof.GetPosition() / 1024) << " Kbytes");
+	}
+	// Now sof is closed and I can call safeSave.Process()
+	
+	if (params.persistent.safeSave)
+		safeSave.Process();
+}
+
+BOOST_CLASS_EXPORT_IMPLEMENT(slg::DLSCacheEntry)
+BOOST_CLASS_EXPORT_IMPLEMENT(slg::DLSCBvh)
+BOOST_CLASS_EXPORT_IMPLEMENT(slg::DLSCParams)
