@@ -59,6 +59,7 @@
 * Added the support for Shadow Terminator avoidance factor when using bump mapping
 * Upgraded Intel Oidn to v1.0
 * Reworked Direct Light Sampling Cache
+* Direct Light Sampling Cache now supports persistent cache on file
 
 ### Fixed Bugs
 
